hphp/hack/test/ifc/check/finally_conts.php.exp
=== IFC analysis results for finally_conts.php
File "finally_conts.php", line 30, characters 5-15:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "finally_conts.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "finally_conts.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "finally_conts.php", line 21, characters 9-19:
  Another program point contributing to the illegal flow
  File "finally_conts.php", line 26, characters 7-14:
  Another program point contributing to the illegal flow
File "finally_conts.php", line 45, characters 5-14:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "finally_conts.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "finally_conts.php", line 9, characters 14-19:
  This may be the data sink with policy `B`
  File "finally_conts.php", line 40, characters 11-19:
  Another program point contributing to the illegal flow
